--- a/views/ifPass.pug
+++ b/views/ifPass.pug
@@ -3,55 +3,42 @@ html
         link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700")
         link(rel="stylesheet" href="/css/main.css")
     body
-        .home.ankiety
+        .view.ankiety
             header.app-header
                 
                 nav.app-nav
                     ul.app-nav__list
                         li.app-nav__list-item
-                            a.app-nav__link.app-nav__link--is-active(href="#") home
+                            a.app-nav__link.app-nav__link--is-active(href="/") home
                         li.app-nav__list-item
                             a.app-nav__link(href="/view") czy zmodyfikowano
                         li.app-nav__list-item
-                            a.app-nav__link(href="/ifPass") czy wypełniono
+                            a.app-nav__link(href="/ifPass")  czy wypełniono
             .wrapper
                 section.slogan
                     h1.slogan__header
-                        | Be a hero. Wypełnij ankietę.
+                        | Sprawdź swoją ankietę
                     p.slogan__text
                         | Jest anonimowa, pomoże w ocenie.
                     .actions
-                        button.btn.btn--primary(@click="formLightbox = true") Wypełnij ankietę
-                   
+                        button.btn.btn--primary(@click="formLightbox = true") Sprawdź
                         
                 
             .lightbox(v-show="formLightbox == true" style="display: none;")
                 .lightbox__content
-                    h2.lightbox__header Wypełnij ankietę
-                    form.lightbox__form(action="/applications" method="POST")
+                    h2.lightbox__header Sprawdź ankietę
+                    form.lightbox__form(action="/applications3" method="POST")
                         .lightbox__form-control
-                            label.lightbox__label twoje haslo
-                            input.lightbox__input(placeholder="zapamietaj je" type="text" name="appHaslo")
-                        .lightbox__form-control
-                            label.lightbox__label twoje imie
+                            label.lightbox__label imie
                             input.lightbox__input(placeholder="imie" type="text" name="usName")
                         .lightbox__form-control
-                            label.lightbox__label twoje nazwisko
+                            label.lightbox__label nazwisko
                             input.lightbox__input(placeholder="nazwisko" type="text" name="usSurname")
                         .lightbox__form-control
-                            label.lightbox__label twoj mail
+                            label.lightbox__label mail
                             input.lightbox__input(placeholder="mail" type="text" name="usMail")
-                        .lightbox__form-control
-                            label.lightbox__label Twoja opinia słowna?
-                            input.lightbox__input(placeholder="Było spoko" type="text" name="appName")
-                        .lightbox__form-control
-                            label.lightbox__label Jaka jest twoja ocena?
-                            input.lightbox__input(placeholder="od 1 do 10" type="text" name="appMark")
-                        .lightbox__form-control
-                            label.lightbox__label tutaj mozesz sie rozpisać
-                            textarea.lightbox__input(placeholder="example@xd.com" type="text" name="appMessage")
                         .lightbox__actions
-                            button.btn.btn--primary Wyślij
+                            button.btn.btn--primary Sprawdź
             if (formMessage.length)
                 .lightbox(v-show="showFeedback")
                     .lightbox__content
