--- a/views/home.pug
+++ b/views/home.pug
@@ -1,5 +1,10 @@
-html
+<!DOCTYPE html>
+ 
+html(lang="pl")
     head
+        meta(charset="UTF-8")
+        meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        title Ankiety
         link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700")
         link(rel="stylesheet" href="/css/main.css")
     body
